# generate_ledger

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  Source.gv  TODO.md  accounts.json  bob_account_info.json  cliff.toml  cspell-words.txt  cspell.json  cspell.yaml  generate_ledger_json.py  good_ledger.json  ledger_also_works.json  mk_txns.py  mkdocs.yml  mysrc  new_ledger_data.json  pyproject.toml  subgraph.gv  test_net  test_trustline.json  token_howto.txt  tree.txt  trustline.json  trustline_ledger_data.json
.claude/: settings.local.json
.github/linters/: .megalinter.yml  .yamllint.yml
.github/workflows/: main.yml  publish.yml  publish_docs.yml  release-prep.yml  release.yml  tests.yml  workflow.yml
docker/: Dockerfile
docs/: amendments.md  benchmark-1m-target.md  cli.md  development.md  how-it-works.md  index.md  library-usage.md  library.md  project-guide.md  quickstart.md  release.md  testpypi-release.md
docs/overrides/partials/: header.html
docs/sessions/: 2026-01-28-amm-fixes.md
docs/stylesheets/: docs-version.css
docs/superpowers/plans/: 2026-06-04-release-pipeline-consolidation.md
docs/superpowers/specs/: 2026-06-04-release-pipeline-consolidation-design.md
generate_ledger/: pyproject.toml
generate_ledger/src/generate_ledger/: __init__.py  gen.py
plans/: module-separation.md
sample_test_network/: docker-compose.yml  ledger.json  mk_txns.py
sample_test_network/rippled/: rippled.cfg
sample_test_network/val0/: rippled.cfg
sample_test_network/val1/: rippled.cfg
sample_test_network/val2/: rippled.cfg
sample_test_network/val3/: rippled.cfg
sample_test_network/val4/: rippled.cfg
samples/rich-100/: accounts.json  ledger.json
samples/simple-10/: accounts.json  ledger.json
scripts/: README.md  bench_accounts.py  bench_accounts_old.py  gen_gateway_ledger.py  test-matrix.sh  update_test_fixture.py
scripts/release/: check_release_actor.py  next_version.py  parse_release_tag.py
slides/: package-lock.json  package.json  slides.md
specs/001-xrpl-ledger-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-xrpl-ledger-generator/checklists/: requirements.md
specs/001-xrpl-ledger-generator/contracts/: cli-interface.md
src/: docker-compose.new_version.yml
src/generate_ledger/: .compose_old.py  __init__.py  accounts.py  amendments.py  amm.py  art_file.py  cli.py  cli_defaults.py  compose.py  config.py  constants.py  crypto.py  crypto_backends.py  directory_nodes.py  gateways.py  gen.py  gen_mbp.py  gpu_backend.py  indices.py  ledger.py  ledger_builder.py  ledger_main.py  ledger_objects_needed_for_trustline.md  ledger_types.py  main.py  menu.py  mpt.py  rippled_cfg.py  rippled_config.orig.py  sponsor.py  trustlines.py  xrpld_cfg.py  xrpld_node.cfg  xrpld_validator.cfg  xxcli.py
src/generate_ledger/cli/: __init__.py  auto.py  auto_cmd.py  compose.py  compose_click.py  ledger.py  main.py  options.py  parsers.py  rippled_cfg.py  shared_options.py  xrpld_cfg.py
src/generate_ledger/commands/: __init__.py  compose_writer.py  config.py  ledger_writer.py
src/generate_ledger/config/: base.toml
src/generate_ledger/config/envs/: mainnet.toml
src/generate_ledger/config/roles/: node.toml  validator.toml
src/generate_ledger/cuda/: ed25519_accounts.cu
src/generate_ledger/data/: amendment_list_dev_20250907.json  amendments_mainnet.json  amendments_release.json
src/generate_ledger/develop/: __init__.py  mpt.py  vault.py
src/generate_ledger/models/: account.py  ledger.py  namespace.py  ripplestate.py
src/generate_ledger/services/: compose_service.py  config_service.py  ledger_service.py
src/generate_ledger/topo/: README.md  json2dot.py  michaelnet.gv  star.json  topo_json.py  topo_net.py  topology_to_ripple_cfg.py
src/generate_ledger/topo/gen_topo/: README.md  cluster  draw.py  draw_star.py  gen_star.py  new_topo.json  new_topo.py  star_cfg.json  test_net  test_net.gv
src/generate_ledger/topo/networks/: star.json  star_clusters_dual_hubs.json
src/generate_ledger/utils/: __init__.py  art_file.py  config.py  merging.py  paths.py
src/gl/: __init__.py
testnet/: accounts.json  docker-compose.yml  ledger.json
testnet/volumes/rippled/: rippled.cfg
testnet/volumes/val0/: rippled.cfg
testnet/volumes/val1/: rippled.cfg
testnet/volumes/val2/: rippled.cfg
testnet/volumes/val3/: rippled.cfg
testnet/volumes/val4/: rippled.cfg
tests/: conftest.py  test_defaults.py  test_fixtures.py  test_issue.py  xrpl_validators.py
tests/cli/: test_cli_auto.py  test_cli_auto_builder.py  test_cli_compose.py  test_cli_ledger.py  test_cli_main.py  test_cli_overrides.py  test_cli_rippled.py  test_cli_smoke.py  test_cli_xrpld.py  test_compose_writer.py  test_parsers.py
tests/cli/config/: test_config_gen.py
tests/data/: account_vectors.json  amendments.json  amendments_develop.json  features_develop.macro  features_test.macro  ripplestate_vectors.json
tests/data/ledger/testnet/: amendments.txt  compose.yml  enabled_amendments.sh  get_pubkeys.sh  server_info.sh
tests/fixtures/: accounts.py
tests/integration/: test_features_macro_sync.py  test_gen_ledger_state.py
tests/ledger/: test_serialize.py  test_trustline.py
tests/lib/: test_accounts.py  test_amendment_parser.py  test_amendments.py  test_amm.py  test_cli_defaults.py  test_compose_ports.py  test_compose_service.py  test_config_reexport.py  test_crypto_backends.py  test_develop_registry.py  test_gateways.py  test_gpu_backend.py  test_indices.py  test_ledger_builder.py  test_merging.py  test_mpt.py  test_sponsor.py  test_trustlines.py
tests/lib/compose/: test_compose.py
tests/lib/config/: test_config.py
tests/lib/ledger/: test_ledger.py  xtest_trustline.py
tests/scripts/: test_bench.py  test_check_release_actor.py  test_next_version.py  test_parse_release_tag.py
tests/smoke/: _helpers.py  conftest.py  helpers.py  test_amm_autobridge.py  test_amm_deposit_withdraw.py  test_mpt_transfer.py  test_payment_ring.py  test_quickstart_boot.py  test_trustline_balance.py
(+9 files in other folders)
