[project]
name = "generate-ledger"
version = "0.0.4a4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Legleux", email = "legleux@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base58>=2.1.1",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruamel-yaml>=0.18.14",
    "typer>=0.17.4",
    "xrpl-py>=4.2.0",
]

[project.scripts]

gen = "generate_ledger.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generate_ledger"]

[tool.hatch.build.targets.sdist]
include = [
  "src/generate_ledger",
  "pyproject.toml",
  "README.md",
#   "LICENSE*",
]

[tool.ruff]
target-version = "py313"
line-length = 120
force-exclude = true
exclude = [
    "src/generate_ledger/gen_mbp.py",
    "src/generate_ledger/gen.py",
    "src/generate_ledger/menu.py",
    "src/generate_ledger/topo/",
    "src/generate_ledger/utils/paths.py",
    "src/generate_ledger/commands/compose_writer.py",
    "src/gl/",
    "tests/lib/ledger/",
    "mk_txns.py",
]

[tool.ruff.lint]
select = ["E","F","I","W","B","UP","ISC","PL","RUF"]
ignore = [
    "E203",
    "B008",      # typer.Option() in function defaults — standard typer/click pattern
    "PLR0913",   # too many arguments — unavoidable in CLI commands and builders
    "PLR0912",   # too many branches — complex parsers
    "PLR0915",   # too many statements — complex functions
]

[tool.ruff.lint.isort]
known-first-party = ["generate_ledger", "gl"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]
"scripts/**" = ["PLR2004", "PLC0415", "PLW0603", "RUF001"]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  {include-group = "fast"}
]
lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.11",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0",
]
fast = [
    "pynacl>=1.5.0",
]

[tool.pytest.ini_options]
# minversion = "8.0"
# addopts = "-q"
addopts = "-rP --cov --cov-report=term-missing:skip-covered"
# addopts = "-rx"
# addopts = "-qrP"
# testpaths = ["tests"]

[tool.coverage.run]
source = ["src/generate_ledger"]

omit = [
    # Dead code: broken imports or unused stubs
    "*/services/config_service.py",
    "*/services/ledger_service.py",
    "*/commands/config.py",
    "*/utils/topo_net.py",
    "*/utils/art_file.py",
    "*/utils/paths.py",
    # Legacy/unused entry points and modules
    "*/gen.py",
    "*/gen_mbp.py",
    "*/ledger_main.py",
    "*/main.py",
    "*/menu.py",
    "*/xxcli.py",
    # Unused topology and model modules
    "*/topo/*",
    "*/models/ledger.py",
    "*/models/ripplestate.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
