[project]
name = "generate-ledger"
version = "0.1.0"
description = "Generate custom XRPL genesis ledgers and test network environments"
authors = [{ name = "Michael Legleux", email = "legleux@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "ISC" }

dependencies = [
    "base58>=2.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruamel-yaml>=0.18.14",
    "typer>=0.17.4",
    "xrpl-py>=4.2.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
  Issues = "https://github.com/legleux/generate_ledger/issues"
  Repository = "https://github.com/legleux/generate_ledger"

[project.scripts]
gen = "generate_ledger.cli.main:cli"

[build-system]
  requires = ["uv_build>=0.8.0,<0.12.0"]

  build-backend = "uv_build"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/generate_ledger"]

# [tool.hatch.build.targets.sdist]
# include = [
#   "src/generate_ledger",
#   "pyproject.toml",
#   "README.md",
# ]

[tool.ruff]
target-version = "py313"
line-length = 120
force-exclude = true
exclude = [
]

[tool.ruff.lint]
select = ["E","F","I","W","B","UP","ISC","PL","RUF"]
ignore = [
    "E203",
    "B008",      # typer.Option() in function defaults — standard typer/click pattern
    "PLR0913",   # too many arguments — unavoidable in CLI commands and builders
    "PLR0912",   # too many branches — complex parsers
    "PLR0915",   # too many statements — complex functions
]

[tool.ruff.lint.isort]
known-first-party = ["generate_ledger", "gl"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLC0415"]
"scripts/**" = ["PLR2004", "PLC0415", "PLW0603", "RUF001"]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  "complexipy>=5.2.0",
  "radon>=6.0.1",
  "mkdocs-material>=9.6.0",
]
lint = [
  "pre-commit>=4.2.0",
  "ruff>=0.12.11",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.0",
]

[project.optional-dependencies]
fast = [
  "coincurve>=20.0.0,<21.0.0",
  "pynacl>=1.5.0",
]
gpu = [
  "cupy-cuda12x>=13.0.0",
  "nvidia-cuda-nvcc-cu12>=12.9.86",
  "nvidia-cuda-nvrtc-cu12>=12.9.86",
]

[tool.pytest.ini_options]
# minversion = "8.0"
# addopts = "-q"
addopts = "-rP --cov --cov-report=term-missing:skip-covered -m 'not smoke and not network'"
# addopts = "-rx"
# addopts = "-qrP"
# testpaths = ["tests"]
markers = [
    "smoke: Smoke tests requiring Docker (deselected by default)",
    "network: Tests that docker-compose up a full consensus network (deselected by default)",
]

[tool.coverage.run]
source = ["src/generate_ledger"]

omit = []

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
