[project]
name = "generate-ledger"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base58>=2.1.1",
    "httpx>=0.28.1",
    "ruamel-yaml>=0.18.14",
    "xrpl-py>=4.2.0",
]

[project.scripts]
# generate = "generate_ledger:main"
compose = "generate_ledger:compose"
ledger = "generate_ledger:ledger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
